--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,14 @@
 
 
 
-
-.background{
+body{
+     background-color: #f8f8f8;
+     overflow: hidden;
+     height: 100%;
+     width: 100%;
+     padding: 20px;
 }
+
 
 .dino{
      width: 60px;
@@ -16,7 +21,6 @@
      position: absolute;
      bottom: 0;
      background-image: url(./../img/dino.png);
-     /* background-color: dodgerblue; */
 }
 
 .cactus{
@@ -25,16 +29,39 @@
      height: 60px;
      width: 60px;
      background-image: url("./../img/cactus.png");
-     /* background-color: tomato; */
 }
 
 .game-over{
      color: firebrick;
-     font-family: "Oswald";
+     font-family: "Oswald", sans-serif;
      font-size: 50px;
-     width: 100vw;
      text-align: center;
-     position: relative;
-     top: 200px;
+     margin-top: 200px;
+}
 
+.gameover::after{
+     content: "Press F5 to restart";
+     color: gray;
+     font-size: 2rem;
+     text-align: center;
+
+}
+
+@keyframes slideRight{
+     from {
+          background-position: 70000%;
+     }
+     to {
+          background-position: 0;
+     }
+}
+
+.background{
+     position: absolute;
+     bottom: 0;
+     background-image: url("./../img/background.png");
+     background-repeat: repeat-x;
+     animation: slideRight 2000s infinite linear;
+     width: 100%;
+     height: 200px;
 }
